Make it possible to turn on and off models
